# h2o-trial

./: .gitattributes  .gitignore  Data Exploration and Cleaning.ipynb  README.rst  logistic_regression.py  mypy.ini  nb_data_exploration.ipynb  nb_report.ipynb  pipeline.py  pyproject.toml  workflow.py
assignment/: assignment.txt  assignment_short.txt  dictionary.txt
assignment/ds_engr/: assignment.txt
data/: creditcard.csv
tests/: test_logistic_regression.py  test_pipeline.py
